--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>The Brothers Karamazov</i> by Fyodor Dostoevsky.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>KPop Demon Hunters</i> (d. Maggie Kang, Chris Appelhans), and <i>Furiosa: A Mad Max Saga</i> (2024 d. George Miller)</small>
+          <small><b>Recent Movies</b>: <i>KPop Demon Hunters</i> (d. Maggie Kang, Chris Appelhans), and <i>The Spectacular Now</i> (2013 d. James Ponsoldt)</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Renaissance</i> by Beyonce (<a href="https://open.spotify.com/album/6FJxoadUE4JNVwWHghBwnb?si=RSfqXehORo2QK4Dg95FFuA">Spotify</a>), and <i>Remain In Light</i> by Angelique Kidjo. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
